--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   - docker tag udagram-reverseproxy trustekpo/udagram-reverseproxy:v5a
   - docker tag udagram-api-user trustekpo/udagram-api-user:v5a
   - docker tag udagram-api-feed trustekpo/udagram-api-feed:v5a
-  - docker tag udagram-frontend trustekpo/udagram-frontend
+  - docker tag udagram-frontend trustekpo/udagram-frontend:local
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_USERNAME" --password-stdin
