--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - docker tag udagram-frontend trustekpo/udagram-frontend:local
 
 after_success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_USERNAME" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push trustekpo/udagram-reverseproxy:v5a
   - docker push trustekpo/udagram-api-user:v5a
   - docker push trustekpo/udagram-api-feed:v5a
