--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,14 @@ script:
   - docker tag udagram-reverseproxy trustekpo/udagram-reverseproxy:v5a
   - docker tag udagram-api-user trustekpo/udagram-api-user:v5a
   - docker tag udagram-api-feed trustekpo/udagram-api-feed:v5a
-  - docker tag udagram-frontend trustekpo/udagram-frontend:local
+  - docker tag udagram-frontend trustekpo/udagram-frontend:v5a
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push trustekpo/udagram-reverseproxy:v5a
   - docker push trustekpo/udagram-api-user:v5a
   - docker push trustekpo/udagram-api-feed:v5a
-  - docker push trustekpo/udagram-frontend:local
+  - docker push trustekpo/udagram-frontend:v5a
 
   
 
