reverted changes in ngnix fike

--- a/udagram-reverseproxy/nginx.conf
+++ b/udagram-reverseproxy/nginx.conf
@@ -17,10 +17,10 @@ http {
     server {
       listen 8080;
       location /api/v0/feed {
-        proxy_pass            http://a584f90d337c8465da2761e0566edf56-2107694558.us-east-1.elb.amazonaws.com:8080/api/v0;
+        proxy_pass            http://feed;
       }
       location /api/v0/users {
-        proxy_pass            http://a91d42c9dbbab4a1281938a599d92b3a-177659962.us-east-1.elb.amazonaws.com:8080/api/v0;
+        proxy_pass            http://user;
       }
     }
 }
