changes to codebase

--- a/udagram-reverseproxy/nginx.conf
+++ b/udagram-reverseproxy/nginx.conf
@@ -17,10 +17,10 @@ http {
     server {
       listen 8080;
       location /api/v0/feed {
-        proxy_pass            http://feed;
+        proxy_pass            http://a62b98a7cde2741e2ab00fec6dfef103-1891483981.us-east-1.elb.amazonaws.com:8080;
       }
       location /api/v0/users {
-        proxy_pass            http://user;
+        proxy_pass            http://a5b66e7d18d7442c992a0d496abc2d2f-350956355.us-east-1.elb.amazonaws.com:8080;
       }
     }
 }
